# TEA

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
common/: cryptlib.cpp  cryptlib.h  tee_crypto_functions.cpp  tee_crypto_functions.h  tee_functions.cpp  tee_functions.h
include/: CLI11.hpp  config.h  message_structs.h  misc.h  peer_information.h  receiver_blob_pair.h  serialization.h  shared_functions.h  uri.h
login_server/: CMakeLists.txt
login_server/include/: login_server_config.h
login_server/trusted/: enclave_t_substitute.h  searchable_queue.h  server_enclave.cpp  server_enclave.h
login_server/untrusted/: enclave_u_substitute.cpp  enclave_u_substitute.h  main.cpp  server.cpp  server.h
login_server/untrusted/network/: network_manager_server.cpp  network_manager_server.h
peer/: CMakeLists.txt
peer/cmake/: FindcURLpp.cmake
peer/include/: vis_data.h
peer/shared/: overlay_return_tuple.cpp  overlay_return_tuple.h  overlay_structure_scheme_message.cpp  overlay_structure_scheme_message.h
peer/trusted/: distributed_agreement_scheme.cpp  distributed_agreement_scheme.h  enclave_t_substitute.h  helpers.h  overlay_structure_scheme.cpp  overlay_structure_scheme.h  peer_enclave.cpp  peer_enclave.h  routing_scheme.cpp  routing_scheme.h
peer/trusted/structs/: aad_tuple.h
peer/untrusted/: enclave_u_substitute.cpp  enclave_u_substitute.h  main.cpp  peer.cpp  peer.h
peer/untrusted/network/: network_manager.cpp  network_manager.h
tests/: CMakeLists.txt  peer_test.cpp  shared_structs_test.cpp
visualization/: .gitignore  replay.py  visserver.py  visualize.py
